tests/specs/run/reference_types_error_vendor_dir/reference_types_error.js.out
Check [WILDCARD]reference_types_error.js
TS2688 [ERROR]: Cannot find type definition file for './nonexistent.d.ts'.
/// <reference types="./nonexistent.d.ts" />
                      ^
    at file:///[WILDLINE]/reference_types_error.js:1:23

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
